# VASA

./: README.md
ABY/: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
ABY/src/abycore/: CMakeLists.txt
ABY/src/abycore/ABY_utils/: ABYconstants.h  memory.h  yaokey.h
ABY/src/abycore/aby/: abyparty.cpp
ABY/src/abycore/circuit/: abycircuit.h  booleancircuits.cpp  share.cpp
ABY/src/abycore/sharing/: sharing.cpp  yaoclientsharing.cpp  yaoclientsharing.h  yaoserversharing.cpp  yaoserversharing.h  yaosharing.cpp  yaosharing.h
ABY/src/abycore/sharing/aes_processors/: aes_processor.cpp  aes_processor.h  aesni_halfgate_processors.cpp  aesni_halfgate_processors.h  aesni_helpers.h  aesni_prf_processors.cpp  aesni_prf_processors.h  vaes_halfgate_processors.cpp  vaes_halfgate_processors.h  vaes_helpers.h  vaes_prf_processors.cpp  vaes_prf_processors.h
ABY/src/abycore/sharing/yao_variants/: halfgates_circ_client.cpp  halfgates_circ_client.h  halfgates_circ_server.cpp  halfgates_circ_server.h  halfgates_mi_client.cpp  halfgates_mi_client.h  halfgates_mi_server.cpp  halfgates_mi_server.h  halfgates_prp_client.cpp  halfgates_prp_client.h  halfgates_prp_server.cpp  halfgates_prp_server.h  prf_client.cpp  prf_client.h  prf_server.cpp  prf_server.h
ABY/src/examples/aes/common/: aescircuit.cpp
ABY/src/examples/uc_circuit/refs/remotes/origin/: HEAD  master
ABY/src/test/: CMakeLists.txt  abytest.cpp
SCI/: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
SCI/networks/: main_densenet121_field64.cpp  main_densenet121_ring32.cpp  main_resnet32_cifar_field64.cpp  main_resnet50_field64.cpp  main_resnet50_ring32.cpp  main_sqnet_field64.cpp  main_sqnet_ring32.cpp
SCI/src/: functionalities.h  functionalities_wrapper.h  globals.h
SCI/src/LinearHE/: conv-field.cpp  elemwise-prod-field.cpp  fc-field.cpp
SCI/src/NonLinear/: relu-interface.h
SCI/src/utils/: block.h  ccrf.h  prg.h  prp.h  vaes.h
SCI/tests/: test_functionalities.cpp
emp/emp-ag2pc/: CMakeLists.txt  CMakeSettings.json  README.md
emp/emp-ag2pc/emp-ag2pc/: 2pc.h  amortized_2pc.h  fpre.h
emp/emp-ag2pc/test/: amortized_2pc.cpp  sha256.cpp
emp/emp-agmpc/: CMakeLists.txt  README.md
emp/emp-agmpc/emp-agmpc/: fpremp.h  mpc.h
emp/emp-ot/: CMakeLists.txt  CMakeSettings.json  README.md
emp/emp-ot/emp-ot/: cot.h  iknp.h
emp/emp-ot/emp-ot/ferret/: lpn_f2.h  spcot_recver.h  spcot_sender.h  twokeyprp.h
emp/emp-ot/test/: ot.cpp
emp/emp-tool/: CMakeLists.txt  CMakeSettings.json  README.md
emp/emp-tool/emp-tool/utils/: aes.h  aes_opt.h  block.h  constants.h  mitccrh.h  prg.h  utils.hpp
emp/emp-tool/test/: prg.cpp
